Codigo Ejemplo/1. Principios Universales de Diseño Software/1.3 Composicion vs Herencia/ejercicio/EmpresaEnvio/src/main/java/org/example/bad/EnvioNacional.java
package org.example.bad;

public abstract class EnvioNacional extends Envio{
    @Override
    public double calcularCostoEnvio() {
        return 100;
    }
}
